# Nepal_data_base_project

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  render.yaml  requirements.txt  vercel.json
.github/workflows/: ci.yml  ingest.yml  keep-alive.yml
Instruction_file/: phase-1-steps.md
api/: index.py  main.py  models.py  repository.py
db/migrations/: 0001_provenance.rollback.sql  0001_provenance.sql  0002_dimensions.rollback.sql  0002_dimensions.sql  0003_observations.rollback.sql  0003_observations.sql  0004_bs_calendar.rollback.sql  0004_bs_calendar.sql  0005_nrb_bfs_staging.rollback.sql  0005_nrb_bfs_staging.sql
db/seeds/: datasets.csv  geographies.csv  indicators.csv  indicators_census.csv  indicators_nrb.csv  indicators_wb_full.csv  sources.csv  units.csv
docs/: PROJECT_LOG.md  nepal-data-portal-blueprint.md  nepal-data-portal-master-prompt.md
docs/decisions/: 0001-data-downloads.md  0002-timeline-sort-key.md  0003-sector-based-organization.md  0004-official-map.md
docs/runbooks/: adding-a-data-source.md  restore.md
docs/specs/: frontend-sector-portal-spec.md
docs/steps/: START-HERE.md  budget-center.md  onboard-cehrd-education.md  onboard-election-commission.md  onboard-mof-publications.md  onboard-nationalgeoportal.md  onboard-opendatanepal.md  onboard-wb-nepal-fiscal.md  phase-0-steps.md  phase-2-steps.md  phase-2b-expansion-steps.md  phase-3-steps.md  phase-4-steps.md  phase-5-steps.md
ingestion/common/: bs_calendar.py  fiscal_periods.py  io_utf8.py  quality.py  raw_lake.py
ingestion/nrb/: bfs_acquire.py  bfs_extract.py  bfs_layout.py
ingestion/nso/: census_layout.py  census_pipeline.py
ingestion/worldbank/: pipeline.py
reference/calendar/: PROVENANCE.md  bs_month_lengths.json
reference/census/: PROVENANCE.md  en_common.json  np_common.json  nso_districts_raw.json  nso_geo_ids.csv
reference/nrb/: bfs_manifest.json
reference/worldbank/: unmapped_report.csv
scripts/: check_db.py  load_bs_calendar.py  migrate.py  nrb_bfs.py  seed.py  seed_census.py  seed_nrb.py  seed_periods_ne.py  trace_demo.py  wb_catalog.py
tests/: test_api.py  test_bs_calendar.py  test_census_layout.py  test_fiscal_periods.py  test_nrb_bfs_layout.py  test_quality.py  test_raw_lake.py  test_sanity.py  test_vercel_config.py  test_wb_catalog_rules.py  test_worldbank.py
tests/fixtures/: wb_sample.json
web/: .gitignore  package-lock.json  package.json  take-screenshots.mjs
web/app/: globals.css  layout.tsx  page.tsx
web/components/: BankingChart.tsx  BankingDashboard.tsx  (+15 more)
(+17 files in other folders)
